Fixed #11928 - MenuItem visible property not working in Menu <p-menu> with sub items.

--- a/src/app/components/menu/menu.css
+++ b/src/app/components/menu/menu.css
@@ -11,7 +11,6 @@
 }
 
 .p-menu .p-submenu-header{
-    display: flex;
     align-items: center;
 }
 
